# mipt-cs-cpp-demos

custom_container_tests/: container.h  main.cpp  main_easy.cpp
lab01/: 01_list.c  02_list_skeleton.cpp  03_list.cpp  04_tree_skeleton.cpp
lab02/: 01_segfault.cpp  02_memleak.cpp  03_meminvalid.cpp  README.md
lab03/01_project_without_structure/: animals.cpp
lab03/02_project_structure_problem_one/: cow.cpp  crazy_dog.cpp  dog.cpp  main.cpp
lab03/03_project_structure_problem_one_solved/: animal.cpp  cow.cpp  crazy_dog.cpp  dog.cpp  main.cpp
lab03/04_project_structure_problem_two/: class_a.cpp  class_b.cpp  class_c.cpp
lab03/05_project_structure_problem_two_solved/: class_a.cpp  class_a.hpp  class_b.cpp  class_b.hpp  class_c.cpp  class_c.hpp
lab03/06_project_structure_naive_dirty_make/: dog.hpp
lab03/07_project_structure_steps_to_real_make/: Makefile0  Makefile1  Makefile2  Makefile3
lab03/08_project_structure_cmake/: CMakeLists.txt  dog.cpp  main.cpp
lab03/cmake_test_project/: CMakeLists.txt  README.md  test.c
opengl/with-freeglut/: CMakeLists.txt  README.md  main.cpp
opengl/with-glfw/: CMakeLists.txt  README.md  main.cpp
sfml/: CMakeLists.txt  README.md  main.cpp
string_java_puzzle/: 01_puzzle_intro.java  02_black_magic_puzzle.java
vtk/: CMakeLists.txt  main.cpp
